--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hamjest-spy",
   "version": "1.0.0",
   "description": "A spy for hamjest, incl. some matchers.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "babel src/ --out-dir lib/ --ignore *.spec.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/wolframkriesing/hamjest-spy/issues"
   },
-  "homepage": "https://github.com/wolframkriesing/hamjest-spy#readme"
+  "homepage": "https://github.com/wolframkriesing/hamjest-spy#readme",
+  "peerDependencies": {
+    "hamjest": "2.x"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0"
+  }
 }
