--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A spy for hamjest, incl. some matchers.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./src/*.spec.js --compilers js:babel-register --reporter=dot",
     "prepublish": "babel src/ --out-dir lib/ --ignore *.spec.js"
   },
   "repository": {
@@ -28,6 +28,9 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "hamjest": "^2.13.0",
+    "mocha": "^3.2.0"
   }
 }
