Show the test names by default.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A spy for hamjest, incl. some matchers.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha ./src/*.spec.js --compilers js:babel-register --reporter=dot",
+    "test": "mocha ./src/*.spec.js --compilers js:babel-register",
     "prepublish": "babel src/ --out-dir lib/ --ignore *.spec.js"
   },
   "repository": {
