--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   },
   "homepage": "https://github.com/wolframkriesing/hamjest-spy#readme",
   "peerDependencies": {
-    "hamjest": "2.x"
+    "hamjest": "3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
-    "hamjest": "^2.13.0",
+    "hamjest": "3.1.0",
     "mocha": "^3.2.0"
   }
 }
